# simple_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  schemas.py
app/api/v1/: __init__.py  handlers.py
app/db/: __init__.py  db.py  models.py  storage.py
